# PWCTools

./: =1.1  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml  test.dvf
.github/workflows/: ci-cd.yml
.jupyter/: migrated
.jupyter/lab/workspaces/: auto-0-1753.jupyterlab-workspace  auto-8-26f8.jupyterlab-workspace  auto-c-7f4b.jupyterlab-workspace  auto-d-ab05.jupyterlab-workspace  auto-g-65de.jupyterlab-workspace  auto-p-5c7c.jupyterlab-workspace  auto-p-7d55.jupyterlab-workspace  default-37a8.jupyterlab-workspace
.local/share/jupyter/runtime/: jpserver-7-open.html  jpserver-7.json  jpserver-8-open.html  jpserver-8.json  jupyter_cookie_secret  kernel-2bcc1417-db5f-4f3d-a6d2-99395dd1d865.json  kernel-44853fbb-fd1d-4bfc-bc7f-5285ac2b7d38.json  kernel-89b555c5-f22d-446c-8a27-e5eb57a12181.json
docs/: Makefile  conf.py  example.ipynb  make.bat
src/PWCTools/: PWCTools.py  __init__.py  datasets.py  plotting.py
tests/: data.csv  data_pwc_complete.csv  data_pwc_fg.csv  data_pwc_years.csv  test_PWCTools.py  test_pwctools.py  wf.dvf
