[tool.poetry]
name = "PWCTools"
version = "0.1.0"
description = "Set of tools to use Pesticide in Water Calculator Model"
authors = ["Florencia D'Andrea"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pandas = "^1.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
